# epris

./: Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  epris-completion.sh  org.mpris.epris.service.in
extra/: Makefile.am  Makefile.in  epr-clear.sh  epr-current.sh  epr-next.sh  epr-previous.sh  epr-replay.sh
src/: Makefile.am  Makefile.in  audio-player.c  audio-player.vala  epr.c  epr.vala  epris-client.c  epris-client.vala  epris-common.c  epris-common.vala  epris-external.c  epris-external.h  epris-external.vapi  epris-service.c  epris-service.vala  epris-storage.c  epris-storage.vala  epris-structure.c  epris-structure.vala  epris-track-list.c  epris-track-list.vala  epris.c  epris.vala
